-----------------------------------------------------------
New functions:
 + getLandsat_names(): obtain dataset names
 + getLandsat_query(): query USGS Earth Explorer for Landsat data
 + getLandsat_preview(): preview (quick look) a queried Landsat product
 + getLandsat_data(): download Landsat data on-demand from USGS ESPA
 + login_USGS(): session-wide login to USGS services

Bug fixes:
 + RGB clouring of preview functions is now correct

Changes:
 + clearer login functions naming (removed 'set_' prefix)
 + all request are now internally channeld through gSD.get/gSD.post

-----------------------------------------------------------
getSpatialData 0.0.2
initial session-wide tool functions
-----------------------------------------------------------
New functions:
 + set_archive(): defines getSpatialData archive folder
 + set_aoi(): defines session AOI from sp, sf or matrix object or mapedit GUI input
 + view_aoi(): displays AOI in a mapview viewer

New features:
 + getSentinel_preview() displays previews as corner-referenced RGB images on a mapview map in relation to session AOI by default. With show_aoi = F the session AOI is not displayed. With on_map = F a simple RGB plot is displayed instead.

Contributions:
 + Mike Treglia (@mtreg, issue #1, feature idea)

-----------------------------------------------------------
getSpatialData 0.0.1
getSentinel* function bundle for ESA Copernicus R client
-----------------------------------------------------------
New functions:
 + getSentinel_query(): query function for Sentinel-1, -2, -3
 + getSentinel_preview(): preview (quick look) function for Sentinel-1, -2, -3
 + getSentinel_data(): download function for Sentinel-1, -2, -3
 + set_login_CopHub(): session login for getSentinel* functions

Removed features:
 + early-dev. python bindings, getSpatialData is fully R-native now

-----------------------------------------------------------