@@ -15,7 +15,7 @@ getLandsat_names(username = NULL, password = NULL)
 A character vector
 }
 \description{
-\code{getLandsat_names} obtains names of available Landsat datasets from the USGS Earth Explorer. They can be used with the \link{getLandsat_query} function for querying a Landsat data.
+\code{getLandsat_names} obtains names of available Landsat datasets from the USGS Earth Explorer. They can optionally be used with the \link{getLandsat_query} function for querying a specific Landsat dataset instead of all.
 }
 \seealso{
 \link{getLandsat_query}
